--- a/BackEnd/requirements.txt
+++ b/BackEnd/requirements.txt
@@ -1,8 +1,14 @@
 flask
-flask-sqlalchemy
+flask_sqlalchemy
+jwt
+redis
+flask_caching
+celery
+sqlalchemy
 flask-security
 flask-restful
 flask-cors
 email-validator
 weasyprint
 celery[redis]
+pyJWT
